--- a/doc/context/sources/general/manuals/languages/languages-environment.tex
+++ b/doc/context/sources/general/manuals/languages/languages-environment.tex
@@ -2,6 +2,8 @@
 
 \startenvironment languages-environment
 
+%     \usebodyfont[modern]
+
     \environment manuals-explaining-environment
     \environment manuals-explaining-cover
 
