--- a/doc/context/sources/general/manuals/musings/musings.tex
+++ b/doc/context/sources/general/manuals/musings/musings.tex
@@ -41,6 +41,7 @@
   % \component musings-units          % article
   % \component musings-kerns          % probably article
     \component musings-deserved       % probably article
+    \component musings-riscv
 \stopbodymatter
 
 \stopproduct
