--- a/tex/context/modules/mkiv/s-abbreviations-logos.tex
+++ b/tex/context/modules/mkiv/s-abbreviations-logos.tex
@@ -355,6 +355,7 @@
 \logo [XETEX]         {\XeTeX}
 \logo [XFDF]          {xfdf}
 \logo [XHTML]         {xhtml}
+\logo [XLINK]         {xlink}
 \logo [XINDY]         {Xindy}
 \logo [XITS]          {Xits}
 \logo [XML]           {xml}
