--- a/doc/context/sources/general/manuals/luametatex/luametatex-codes.tex
+++ b/doc/context/sources/general/manuals/luametatex/luametatex-codes.tex
@@ -6,8 +6,8 @@
 
 \startchapter[title=Primitive codes]
 
-here follows a list with all primitives and their category is shown. When the
-engine starts up in ini mode all primitives get defined along with some
+Here follows a list with all primitives and their internal classification. When
+the engine starts up in ini mode all primitives get defined along with some
 properties that makes it possible to do a reverse lookup of a combination of
 command code and char code. But, a primitive, being also a regular command can be
 redefined later on. The table below shows the original pairs but in \CONTEXT\
