--- a/doc/context/sources/general/manuals/luametatex/luametatex.tex
+++ b/doc/context/sources/general/manuals/luametatex/luametatex.tex
@@ -1,4 +1,5 @@
 % language=us runpath=texruns:manuals/luametatex
+\profilemacro\resetallattributes
 
 %     \definefontfeature
 %       [default]
@@ -143,6 +144,8 @@
 % amd 10 fitlet : 30.9 12pps (we gained over 25% compared to the 268 page manual)
 
 % \ifdefined\linebuffering \linebuffering \fi
+
+% 2024-09-25: 9.2 seconds
 
 % \linebuffering
 
